fix: fix title overflow bug

--- a/src/styles/isomer-cms/elements/card.scss
+++ b/src/styles/isomer-cms/elements/card.scss
@@ -18,6 +18,7 @@
     h2{
       font-size: 20px;
       font-weight: normal;
+      overflow-wrap: anywhere;
       color: darken($isomer-blue,20%);
     }
 
